@startuml classdiagram


class CircuitSimulator{
    - FileToGraph* mFileToGraph
    - ResultToFile* mResultToFile
    - CircuitInitializer* mCircuitInitializer

    + CircuitSimulator(std::sting aFilePath)

    + run() : void
}

class Circuit <singleton>{
    - mInstance : Circuit
    - mMapVertexes : map<string,Vertex>
    - Circuit() : void
    + getInstance() : Circuit

    + runSim() : void
    + getVertexMap() : std::map<std::string, Vertex*>&
}

class FileToGraph <Template Method> {
    - mInputFile : FILE

    - openFile() : void
    - closeFile() : void
    - getNumConfigs(): int
    + setStrategy(FileStrategy* aStrategy) : void
    + getGraph(map<string, string>& aVertexMap, map<strng,string>& aEdgeMap) : void 
}

class IOutputVisitor <Interface>{
    + visitInput(Input* aInput) : int
    + visitProbe(Probe* aProbe) : int
    + visitVertex(Vertex* aVertex) : int
}

class OutputVisitor <Visitor>{

}

'TODO interface voor verschillende strategies
'TODO check of hierby dependency injection van toepassing is

interface FileStrategy {
    - openFile() : void
    - closeFile() : void
    - readFile(map<string, string>& aVertexMap, multimap<string, string>& aEdgeMap) : void
}

class TextStrategy <Strategy 1> {
}

class ResultToFile {
    - mOutputFile : FILE

    - openFile() : void
    - closeFile() : void
    + writeOutput(map<string, Vertex>&) : void
}

class CircuitInitializer{
    - mInputs : vertex*[]

    + setInputs(ertex>)
}

class OrGate{

}

class AndGate{

}

class NorGate{

}

class NandGate{

}

class XorGate{

}

class NotGate{

}

class Vertex <Observer> {
    + setInput(unsigned aIndex, bool aValue) virtual : void
    + getOutput() virtual : int
    + setAmountInputs(int aInputs) virtual : void
    + bumpAmountInputs() : void

    + addSubscriber(Vertex *) : void
    + removeSubscriber(Vertex *) : void
    + notifySubscribers() : void
    
    + update() : void

    + acceptOutputVisitor(IOutputVisitor& aIOutputVisitor): int

    - subscribers : Vertex*[]
    - subjects : Vertex*[]
    - *mInput : int
    - mOutput : int
    - mAmountInputs : int

    - mMinInputs : const unsigned
    - mMaxInputs : const unsigned

    - mCurrentPropagationDelay : int
    - mAddingPropagationDelay : int
}

class Input {
    - mValue : int

    + Input(bool aStartValue) : void
    + setInput(int aIndex, bool aValue) override : void
    + getInput() : int
}

class Probe {
    - mValue : int

    + setInput(int aIndex, bool aValue) override : void
    + getInput() : int
}

class VertexFactory <Factory method> {
    + create(const ID&) : Class*
    - assign(const ID&, const Class*) : void
}

class GraphBuilder {
    + createGraph(map<String, String>, multimap<String, String>) : void
    - populateCircuit(map<String, String>) : void
    - connectVertices(multimap<String, String>) : void
    - hasCycle(const map<String, Vertex*>, const multimap<String, String>) : bool
}

VertexFactory --> GraphBuilder
Vertex --> GraphBuilder
Circuit --> GraphBuilder
Circuit --* Vertex
VertexFactory --> Vertex

OutputVisitor --|> IOutputVisitor
Vertex ..> IOutputVisitor
IOutputVisitor ..> Probe
IOutputVisitor ..> Input

FileToGraph *-- FileStrategy
TextStrategy --|> FileStrategy

CircuitSimulator <-- FileToGraph
CircuitSimulator <-- ResultToFile
CircuitSimulator <-- Circuit
CircuitSimulator <-- CircuitInitializer

OrGate --|> Vertex
NorGate --|> Vertex
AndGate --|> Vertex
NandGate --|> Vertex
XorGate --|> Vertex
NotGate --|> Vertex

Input --|> Vertex
Probe --|> Vertex

@enduml
